2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* hyperspec.el (common-lisp-hyperspec-symbols): Add links to
	reader macros.

	* slime.el (slime-reader-macro-at-point): New function.
	(slime-hyperspec-lookup): Call it.

	Adapted from Stas Boukarev.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Rename `slime-symbol-name-at-point' to
	`slime-symbol-at-point'.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([portability] lisp-mode-syntax-table): On Emacs21,
	make @ a prefix character like it's from Emacs22
	onward. `slime-symbol-name-at-point' was written with that
	assumption.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-current-parser-state): Wrap `syntax-ppss' in a
	`save-match-data'. This issue has been reported to the Emacs
	maintainers.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-defun-if-undefined),
	(slime-defmacro-if-undefined): Renamed to
	`slime-DEFUN-if-undefined' and `slime-DEFMACRO-if-undefined' to
	better differentiate between the two.

	(slime-indulge-pretty-colors): New function. You can now put a
	symbol on the plist of `slime-indulge-pretty-colors' to make the
	symbol be fontified like `defun'. This is done for
	`slime-def-connection-var', and the two symbols above.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-defmacro-if-undefined): New. Analogous to
	`slime-defun-if-undefined'.
	([portablity]] with-selected-window) Use it.
	([portability] with-temo-buffer): Likewise.

	Patch by Theam Yong Chew.

2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>

	C-c C-c on (defun foo () ,bar) did not result in a compiler note
	overlay on SBCL.

	* swank-sbcl.lisp (compiler-note-location): Make it take a
	condition; if the condition is a READER-ERROR, the passed
	compiler-error-context is very likely NIL---we have not proceeded
	beyond reading, so we aren't within the compiler yet. In that